# Agentic-commerce-on-arc-smartSpace

./: .gitignore  GenChatboxAi.css  GenChatboxAi.jsx  GenChatboxAiDash.css  GenChatboxAiDash.jsx  LandingPage.jsx  README.md  idea.txt  index.html  package-lock.json
.cursor/commands/: github.md
agentic/: PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  README.md  main.py  pyproject.toml  pytest.ini
backend/: Dashboard.jsx  GenChatboxAi.css  GenChatboxAi.jsx  GenChatboxAiDash.css  GenChatboxAiDash.jsx  README.md  app.py  requirements.txt
backend/agentic/: ARCHITECTURE.md  BACKEND_QUICK_REFERENCE.md  pyproject.toml  run_tests.py
backend/agentic/.github/prompts/: plan-smartspaceAgenticBrain.prompt.md
backend/agentic/src/: config.py  demo_medical_store.py  main.py
backend/agentic/src/audit_logging/: __init__.py  audit_logger.py
backend/agentic/src/budgets/: __init__.py  spending_monitor.py
backend/agentic/src/decision_engine/: __init__.py
backend/agentic/src/evaluators/: task_evaluator.py
backend/agentic/src/integrations/: payment_handler.py
backend/agentic/src/models/: audit.py  budget.py  request.py
backend/agentic/src/policies/: __init__.py  policy_manager.py
backend/agentic/src/pricing/: __init__.py  pricing_engine.py
backend/agentic/src/providers/: __init__.py  base.py  openai_adapter.py
backend/agentic/src/risk/: baseline_tracker.py
backend/agentic/tests/: __init__.py  test_audit_logger.py  test_backend_client.py
frontend/: README.md  index.html  package-lock.json  package.json
openspec/: SmartSpace.md  project.md
src/: App.jsx  index.css
(+234 files in other folders)
