[project]
name = "agentic"
version = "0.1.0"
description = "SmartSpace Agentic Brain - Intelligent API request processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
